[package]
name = "const-arrayvec"
version = "0.2.1"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A vec-like type backed by an array on the stack."
repository = "https://github.com/Michael-F-Bryan/const-arrayvec"
categories = ["data-structures", "embedded", "no-std"]
keywords = ["no_std", "vec", "array", "arrayvec", "buffer"]

[badges]
travis-ci = { repository = "Michael-F-Bryan/const-arrayvec", branch = "master" }
maintenance = { status = "passively-maintained" }
